# tutorials-twitch-bot

./: .editorconfig  .gitignore  README.md  pyproject.toml
carberretta/: __main__.py  config.py
carberretta/bot/: bot.py
carberretta/bot/cogs/: economy.py  fun.py  help.py  meta.py  misc.py
carberretta/data/: build.sql
carberretta/db/: db.py
