[tool.poetry]
name = "tutorials-twitch-bot"
version = "0.5.0"
description = "A Twitch bot for use in the Carberra Tutorials Twitch channel."

license = "BSD 3-Clause"
repository = "https://github.com/Carberra/tutorials-twitch-bot"
readme = "README.md"

authors = [
    "Ethan Henderson <parafoxia@carberra.xyz>"
]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.16.0"
APScheduler = "^3.6.3"
python-dotenv = "^0.15.0"
twitchio = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
